# SoupedModFramework

./: .gitignore  404.html  CMakeLists.txt  CNAME  README.md  index.html  launcher  launcher.html
.github/workflows/: Build-SMF.yml  Build_SMF.yml  build_pages.yml  vue.yml
assets/: index.8106e512.css  index.86995997.js
assets/css/: 0.styles.3c03802f.css  0.styles.8f27f883.css  0.styles.e29fe19e.css
assets/js/: 10.05665b73.js  10.51ab8366.js  10.77610cdd.js  10.de81af73.js  11.1ef0bc45.js  11.3ee559cf.js  11.7b34cf58.js  11.8f3282ae.js  11.9dac4dba.js  11.d5194d0b.js  11.e187e925.js  12.8b5bfbf0.js  12.a795cdf8.js  12.ccdaca60.js  12.ced8766f.js  13.2544a612.js  13.2c6fa579.js  13.486f4108.js  13.4c63248e.js  13.8b9836fb.js  13.92a10e00.js  13.948bc88b.js  13.a0a634b1.js  13.d878431a.js  13.e50b1939.js  14.29803d32.js  14.69691454.js  14.757b0a13.js  14.b1c477f5.js  14.b1ffbd0f.js  14.d3a7ae86.js  14.ddac5476.js  15.22653924.js  2.6c2ac7ba.js  2.774bb2f7.js  2.c00a14a6.js  3.3c56a1f5.js  3.6d76cb1c.js  3.98ff7699.js  3.af8b9db9.js  (+98 more)
common/: CMakeLists.txt
common/glad/include/glad/: glad.h
common/glad/src/: CMakeLists.txt
common/imgui/: CMakeLists.txt  imconfig.h  imgui.cpp  imgui_custom.cpp
common/include/: config.h  imgutils.h  ipc.h  jsutils.h  logger.h  memory.h  registry.h  shared_thread.h  stdjs.h  steam.h  webui.h  ziputils.h
common/src/: CMakeLists.txt  config.cpp  shared_thread.cpp  stdjs.cpp
common/ui/: CMakeLists.txt  webui.cpp
common/ui/gl/: CMakeLists.txt  GPUContextGL.cpp  GPUDriverGL.h  GPUDriverImpl.h
common/utils/: CMakeLists.txt  imgutils.cpp  ipc.cpp  jsutils.cpp  memory.cpp  registry.cpp  steam.cpp  ziputils.cpp
config/: index.html
css/: index.0778cc10.css  index.a7147b02.css  launcher.3d558ea6.css  launcher.a0121c5d.css  launcher.e6e41377.css
develop/: index.html
docs/: CNAME  README.md  index.html  package.json  vue.config.js
docs/launcher/: home.html
docs/src/: Site.vue  main.js
docs/src/components/: Changelog.vue  Changelogs.vue
guide/: Install.html  index.html
js/: chunk-vendors.a652466a.js  chunk-vendors.a652466a.js.map  chunk-vendors.d43ccfde.js  chunk-vendors.d43ccfde.js.map  chunk-vendors.f1eec67d.js  chunk-vendors.f1eec67d.js.map  index.2bea7c33.js  index.2bea7c33.js.map  index.8fb62c3a.js  index.8fb62c3a.js.map  index.943d87ff.js  index.943d87ff.js.map  index.a2603cf2.js  index.a2603cf2.js.map  launcher.1f035985.js  launcher.1f035985.js.map  launcher.bd3cfd8d.js  launcher.bd3cfd8d.js.map  launcher.be885f32.js  launcher.be885f32.js.map
launcher/: .prettierrc  App.cs  CMakeLists.txt  README.md  installer.cs  launcher.cpp  launcher.h  main.cpp  main.cs  neutralino.config.json  package-lock.json  package.json  webview.cs
launcher/assets/: app.html
launcher/cmake/: App.cmake
launcher/interop/: nativeLaunch.cpp  nativeLaunch.h
launcher/resources/: index.html
launcher/resources/components/: BoolSetting.js  LaunchButton.js  Launcher.js  LoadingSpinner.js  Settings.js
launcher/resources/js/: main.js
launcher/src/: App.vue  main.js
launcher/src-tauri/: tauri.conf.json
launcher/src/components/: BoolSetting.vue  LNotif.vue  LSettings.vue  LaunchButton.vue
loader/: CMakeLists.txt  hookManager.cpp  hookManager.h  jsfuncs.cpp  jsfuncs.h  jspatcher.cpp  jswrapper.cpp  main.cpp  modRegistry.cpp  modRegistry.h
loader/assets/: CMakeLists.txt  loading.html  souped.css  souped.html  souped.js  test.html
loader/dumper/: CMakeLists.txt  dumper.cpp  dumper.h
loader/include/: jswrapper.h  patchers.h
loader/jpng/: CMakeLists.txt  jpng.cpp  jpng.h  jpngToPng.cl
loader/js/: souped.js
loader/patcher/: CMakeLists.txt  jspatcher.cpp  overrides.cpp  overrides.h  patchers.cpp  patchers.h
loader/patcher/patchers/: BattleMenuPatcher.cpp  BattleMenuPatcher.h  CMakeLists.txt
loader/scripts/: CMakeLists.txt  souped.js
loader/ui/: CMakeLists.txt  ui.cpp  ui.h  webui.cpp  webui.h
loader/ui/gl/: CMakeLists.txt  GPUDriverGL.cpp  GPUDriverImpl.cpp
loader/ui/glad/: CMakeLists.txt
loader/ui/glad/include/glad/: glad.h
loader/ui/glad/src/: CMakeLists.txt  glad.c
modexplore/: CMakeLists.txt  main.cpp
modfs/: CMakeLists.txt  modfs.cpp
modfs/include/: archive.h  modfs.h
pages/: index.html  launcher.html  package-lock.json  vue.config.js
pages/src/: Launcher.vue
pages/src/assets/: base.css
pages/src/components/: Launch.vue  SiteTitle.vue
proxy/: CMakeLists.txt  main.cpp  steam.cpp
smf-pages/: README.md  package-lock.json  package.json  vue.config.js
smf-pages/docs/: package-lock.json  package.json
smf-pages/docs/src/: index.md
smf-pages/docs/src/.vuepress/: config.js  enhanceApp.js
smf-pages/docs/src/.vuepress/plugins/: launcher.js
smf-pages/docs/src/.vuepress/theme/components/: BoolSetting.vue  Home.vue  LaunchButton.vue  LoadingSpinner.vue  Settings.vue
smf-pages/docs/src/.vuepress/theme/layouts/: Launcher.vue  Layout.vue
smf-pages/docs/src/.vuepress/theme/styles/: components.styl  index.styl  palette.styl
smf-pages/docs/src/config/: README.md
smf-pages/docs/src/develop/: README.md
smf-pages/docs/src/guide/: Install.md  README.md
smf-pages/public/: index.html
smf-pages/src/: App.vue  SMFLauncher.vue  launcher.js
smf-pages/src/components/: LaunchButton.vue  LinkButton.vue
smfapi/: CMakeLists.txt  jswrapper.cpp  main.cpp
smfapi/include/: jswrapper.h
smfapi/js/: souped.js
soupsdk/: CMakeLists.txt
soupsdk/include/: Bin2.h  Profile.h  SoupSTL.h  WinFileIO.h  ZipCpp.h
soupsdk/src/: Bin2.cpp  CMakeLists.txt  ZipCpp.cpp
